--- a/package.json
+++ b/package.json
@@ -1,15 +1,20 @@
 {
   "name": "node_portfolio",
   "version": "1.0.0",
-  "description": "portfolio site using node",
-  "engines": {
-    "node": "6.10.1"
-  },
+  "description": "",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
   },
-  "author": "Max Paspa",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/mxpaspa/node_portfolio.git"
+  },
+  "author": "",
   "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/mxpaspa/node_portfolio/issues"
+  },
+  "homepage": "https://github.com/mxpaspa/node_portfolio#readme"
 }
